Updated With Merged Table

--- a/ProjectMaster-Copy1.ipynb
+++ b/ProjectMaster-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,229 @@
     "east_data = (pd.read_csv('data/NewYork.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
     "south_data = (pd.read_csv('data/AustinTX.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
     "north_data = (pd.read_csv('data/Chicago.csv')).drop(columns=['Unnamed: 0', 'Business ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_table_df = pd.concat([west_data, east_data, south_data, north_data], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Bi-Rite Creamery</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ice Cream &amp; Frozen Yogurt</td>\n",
+       "      <td>37.761591</td>\n",
+       "      <td>-122.425717</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9522</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Brenda's French Soul Food</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>French</td>\n",
+       "      <td>37.782902</td>\n",
+       "      <td>-122.419043</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10740</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Gary Danko</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>37.805870</td>\n",
+       "      <td>-122.420580</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5439</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Tartine Bakery &amp; Cafe</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Bakeries</td>\n",
+       "      <td>37.761425</td>\n",
+       "      <td>-122.424051</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7768</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Hog Island Oyster Co</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>37.795831</td>\n",
+       "      <td>-122.393303</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5819</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2692</td>\n",
+       "      <td>Ruby's Fast Food</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Filipino</td>\n",
+       "      <td>41.961260</td>\n",
+       "      <td>-87.722150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>242</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2693</td>\n",
+       "      <td>The Berghoff Restaurant</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Bars</td>\n",
+       "      <td>41.879333</td>\n",
+       "      <td>-87.628668</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2694</td>\n",
+       "      <td>5 Rabanitos Restaurante and Taqueria</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Mexican</td>\n",
+       "      <td>41.857971</td>\n",
+       "      <td>-87.670952</td>\n",
+       "      <td>2</td>\n",
+       "      <td>428</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2695</td>\n",
+       "      <td>South Coast Sushi</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Sushi Bars</td>\n",
+       "      <td>41.858902</td>\n",
+       "      <td>-87.624275</td>\n",
+       "      <td>2</td>\n",
+       "      <td>514</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2696</td>\n",
+       "      <td>Carmine's</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>41.901995</td>\n",
+       "      <td>-87.628113</td>\n",
+       "      <td>3</td>\n",
+       "      <td>875</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2697 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Business           City State  \\\n",
+       "0                         Bi-Rite Creamery  San Francisco    CA   \n",
+       "1                Brenda's French Soul Food  San Francisco    CA   \n",
+       "2                               Gary Danko  San Francisco    CA   \n",
+       "3                    Tartine Bakery & Cafe  San Francisco    CA   \n",
+       "4                     Hog Island Oyster Co  San Francisco    CA   \n",
+       "...                                    ...            ...   ...   \n",
+       "2692                      Ruby's Fast Food        Chicago    IL   \n",
+       "2693               The Berghoff Restaurant        Chicago    IL   \n",
+       "2694  5 Rabanitos Restaurante and Taqueria        Chicago    IL   \n",
+       "2695                     South Coast Sushi        Chicago    IL   \n",
+       "2696                             Carmine's        Chicago    IL   \n",
+       "\n",
+       "                       Category   Latitude   Longitude  Price  Reviews  Rating  \n",
+       "0     Ice Cream & Frozen Yogurt  37.761591 -122.425717      1     9522     4.5  \n",
+       "1                        French  37.782902 -122.419043      2    10740     4.0  \n",
+       "2                American (New)  37.805870 -122.420580      4     5439     4.5  \n",
+       "3                      Bakeries  37.761425 -122.424051      2     7768     4.0  \n",
+       "4                       Seafood  37.795831 -122.393303      2     5819     4.5  \n",
+       "...                         ...        ...         ...    ...      ...     ...  \n",
+       "2692                   Filipino  41.961260  -87.722150      1      242     4.5  \n",
+       "2693                       Bars  41.879333  -87.628668      2     1015     3.5  \n",
+       "2694                    Mexican  41.857971  -87.670952      2      428     4.0  \n",
+       "2695                 Sushi Bars  41.858902  -87.624275      2      514     4.0  \n",
+       "2696                    Italian  41.901995  -87.628113      3      875     3.5  \n",
+       "\n",
+       "[2697 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df"
    ]
   },
   {
