--- a/ProjectMaster.ipynb
+++ b/ProjectMaster.ipynb
@@ -33,6 +33,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Bi-Rite Creamery</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ice Cream &amp; Frozen Yogurt</td>\n",
+       "      <td>37.761591</td>\n",
+       "      <td>-122.425717</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9522</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Brenda's French Soul Food</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>French</td>\n",
+       "      <td>37.782902</td>\n",
+       "      <td>-122.419043</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10740</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Gary Danko</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>37.805870</td>\n",
+       "      <td>-122.420580</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5439</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Tartine Bakery &amp; Cafe</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Bakeries</td>\n",
+       "      <td>37.761425</td>\n",
+       "      <td>-122.424051</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7768</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Hog Island Oyster Co</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>37.795831</td>\n",
+       "      <td>-122.393303</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5819</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Business           City State                   Category  \\\n",
+       "0           Bi-Rite Creamery  San Francisco    CA  Ice Cream & Frozen Yogurt   \n",
+       "1  Brenda's French Soul Food  San Francisco    CA                     French   \n",
+       "2                 Gary Danko  San Francisco    CA             American (New)   \n",
+       "3      Tartine Bakery & Cafe  San Francisco    CA                   Bakeries   \n",
+       "4       Hog Island Oyster Co  San Francisco    CA                    Seafood   \n",
+       "\n",
+       "    Latitude   Longitude  Price  Reviews  Rating  \n",
+       "0  37.761591 -122.425717      1     9522     4.5  \n",
+       "1  37.782902 -122.419043      2    10740     4.0  \n",
+       "2  37.805870 -122.420580      4     5439     4.5  \n",
+       "3  37.761425 -122.424051      2     7768     4.0  \n",
+       "4  37.795831 -122.393303      2     5819     4.5  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#merged master table for later data analysis\n",
+    "merged_table_df = pd.concat([west_data, east_data, south_data, north_data], ignore_index=True)\n",
+    "merged_table_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
