Update to Master File

--- a/ProjectMaster-Copy1.ipynb
+++ b/ProjectMaster-Copy1.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -244,13 +244,13 @@
        "[2697 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_df"
+    "merged_table_df"
    ]
   },
   {
@@ -768,6 +768,366 @@
    "source": [
     "# East Breakdown - Manhattan, NY"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Bi-Rite Creamery</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Ice Cream &amp; Frozen Yogurt</td>\n",
+       "      <td>37.761591</td>\n",
+       "      <td>-122.425717</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9522</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Brenda's French Soul Food</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>French</td>\n",
+       "      <td>37.782902</td>\n",
+       "      <td>-122.419043</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10740</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Gary Danko</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>37.805870</td>\n",
+       "      <td>-122.420580</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5439</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Tartine Bakery &amp; Cafe</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Bakeries</td>\n",
+       "      <td>37.761425</td>\n",
+       "      <td>-122.424051</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7768</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Hog Island Oyster Co</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>37.795831</td>\n",
+       "      <td>-122.393303</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5819</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Business           City State                   Category  \\\n",
+       "0           Bi-Rite Creamery  San Francisco    CA  Ice Cream & Frozen Yogurt   \n",
+       "1  Brenda's French Soul Food  San Francisco    CA                     French   \n",
+       "2                 Gary Danko  San Francisco    CA             American (New)   \n",
+       "3      Tartine Bakery & Cafe  San Francisco    CA                   Bakeries   \n",
+       "4       Hog Island Oyster Co  San Francisco    CA                    Seafood   \n",
+       "\n",
+       "    Latitude   Longitude  Price  Reviews  Rating  \n",
+       "0  37.761591 -122.425717      1     9522     4.5  \n",
+       "1  37.782902 -122.419043      2    10740     4.0  \n",
+       "2  37.805870 -122.420580      4     5439     4.5  \n",
+       "3  37.761425 -122.424051      2     7768     4.0  \n",
+       "4  37.795831 -122.393303      2     5819     4.5  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_table_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_merged_df = merged_table_df.groupby(['State', 'Category'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_grouped_categories = grouped_merged_df['Category'].count()\n",
+    "grouped_price_avg = grouped_merged_df['Price'].mean()\n",
+    "grouped_reviews_count = grouped_merged_df['Reviews'].mean()\n",
+    "total_grouped_review_counts = grouped_merged_df['Reviews'].count()\n",
+    "average_grouped_ratings = grouped_merged_df['Rating'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Number of Restaurants by Category</th>\n",
+       "      <th>Average Price By Category</th>\n",
+       "      <th>Average # of Reviews per Restaurant</th>\n",
+       "      <th>Average Ratings by Category</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"5\" valign=\"top\">CA</td>\n",
+       "      <td>Afghan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2.923077</td>\n",
+       "      <td>1649.653846</td>\n",
+       "      <td>4.115385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>American (Traditional)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>2302.400000</td>\n",
+       "      <td>4.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Art Museums</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>974.333333</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Asian Fusion</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3053.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"5\" valign=\"top\">IL</td>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>1079.571429</td>\n",
+       "      <td>4.178571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>American (Traditional)</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2.190476</td>\n",
+       "      <td>948.190476</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Aquariums</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1755.000000</td>\n",
+       "      <td>3.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Argentine</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>473.500000</td>\n",
+       "      <td>4.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Art Schools</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1764.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Number of Restaurants by Category  \\\n",
+       "State Category                                                    \n",
+       "CA    Afghan                                                  1   \n",
+       "      American (New)                                         26   \n",
+       "      American (Traditional)                                 15   \n",
+       "      Art Museums                                             3   \n",
+       "      Asian Fusion                                            3   \n",
+       "...                                                         ...   \n",
+       "IL    American (New)                                         56   \n",
+       "      American (Traditional)                                 21   \n",
+       "      Aquariums                                               1   \n",
+       "      Argentine                                               2   \n",
+       "      Art Schools                                             1   \n",
+       "\n",
+       "                              Average Price By Category  \\\n",
+       "State Category                                            \n",
+       "CA    Afghan                                   2.000000   \n",
+       "      American (New)                           2.923077   \n",
+       "      American (Traditional)                   2.400000   \n",
+       "      Art Museums                              1.000000   \n",
+       "      Asian Fusion                             3.000000   \n",
+       "...                                                 ...   \n",
+       "IL    American (New)                           2.500000   \n",
+       "      American (Traditional)                   2.190476   \n",
+       "      Aquariums                                1.000000   \n",
+       "      Argentine                                2.000000   \n",
+       "      Art Schools                              1.000000   \n",
+       "\n",
+       "                              Average # of Reviews per Restaurant  \\\n",
+       "State Category                                                      \n",
+       "CA    Afghan                                           538.000000   \n",
+       "      American (New)                                  1649.653846   \n",
+       "      American (Traditional)                          2302.400000   \n",
+       "      Art Museums                                      974.333333   \n",
+       "      Asian Fusion                                    3053.666667   \n",
+       "...                                                           ...   \n",
+       "IL    American (New)                                  1079.571429   \n",
+       "      American (Traditional)                           948.190476   \n",
+       "      Aquariums                                       1755.000000   \n",
+       "      Argentine                                        473.500000   \n",
+       "      Art Schools                                     1764.000000   \n",
+       "\n",
+       "                              Average Ratings by Category  \n",
+       "State Category                                             \n",
+       "CA    Afghan                                     4.500000  \n",
+       "      American (New)                             4.115385  \n",
+       "      American (Traditional)                     4.033333  \n",
+       "      Art Museums                                4.166667  \n",
+       "      Asian Fusion                               4.000000  \n",
+       "...                                                   ...  \n",
+       "IL    American (New)                             4.178571  \n",
+       "      American (Traditional)                     4.000000  \n",
+       "      Aquariums                                  3.500000  \n",
+       "      Argentine                                  4.250000  \n",
+       "      Art Schools                                4.500000  \n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_category_stats_df= pd.DataFrame({\n",
+    "    \"Number of Restaurants by Category\": total_grouped_categories,\n",
+    "    \"Average Price By Category\": grouped_price_avg,\n",
+    "    \"Average # of Reviews per Restaurant\": grouped_reviews_count,\n",
+    "    \"Average Ratings by Category\": average_grouped_ratings\n",
+    "})\n",
+    "grouped_category_stats_df.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
