--- a/ProjectMaster.ipynb
+++ b/ProjectMaster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Art Museums                          4.500000  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
     "# 3000 + being above average\n",
     "plt.axhline(y=2000, xmin=0, xmax=28, color=\"g\", linewidth=3, linestyle='--');\n",
     "plt.axhline(y=1000, xmin=0, xmax=28, color=\"k\", linewidth=3, linestyle='--');\n",
-    "plt.savefig(\"East - BarGraph_Average_Reviews_By_Categories.png\")\n",
+    "plt.savefig(\"plots/East_BarGraph_Average_Reviews_By_Categories.png\")\n",
     "\n",
     "# print(\"MEAN\")\n",
     "# print(bar_avg_review.mean())\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -268,18 +268,18 @@
     "plt.title(\"Average Reviews By Categories (Types of Restaurants)\\n\\n\\n\", fontsize=30, weight=\"bold\");\n",
     "clb.set_label(\"\\n\\nMedian Reviews\", fontsize=30, weight=\"bold\")\n",
     "\n",
-    "plt.savefig(\"East - ScatterPlot_Average_Reviews_By_Categories.png\")\n"
+    "plt.savefig(\"plots/East_ScatterPlot_Average_Reviews_By_Categories.png\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ced6d4df797b4710bb65fcf44ff1ed7d",
+       "model_id": "63e1ce52d81c400ca3da37daa10eb33e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -387,51 +387,8 @@
        "      <td>3053.666667</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Vegan</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1503.666667</td>\n",
-       "      <td>4.166667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Vegetarian</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>1530.500000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Venues &amp; Event Spaces</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>1367.500000</td>\n",
-       "      <td>4.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Vietnamese</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.600000</td>\n",
-       "      <td>1858.100000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Wine Bars</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>987.500000</td>\n",
-       "      <td>4.250000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>95 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -442,12 +399,6 @@
        "American (Traditional)                     15                   2.400000   \n",
        "Art Museums                                 3                   1.000000   \n",
        "Asian Fusion                                3                   3.000000   \n",
-       "...                                       ...                        ...   \n",
-       "Vegan                                       3                   2.000000   \n",
-       "Vegetarian                                  2                   2.500000   \n",
-       "Venues & Event Spaces                       2                   1.500000   \n",
-       "Vietnamese                                 10                   1.600000   \n",
-       "Wine Bars                                   4                   2.500000   \n",
        "\n",
        "                        Average # of Reviews per Restaurant  \\\n",
        "Category                                                      \n",
@@ -456,12 +407,6 @@
        "American (Traditional)                          2302.400000   \n",
        "Art Museums                                      974.333333   \n",
        "Asian Fusion                                    3053.666667   \n",
-       "...                                                     ...   \n",
-       "Vegan                                           1503.666667   \n",
-       "Vegetarian                                      1530.500000   \n",
-       "Venues & Event Spaces                           1367.500000   \n",
-       "Vietnamese                                      1858.100000   \n",
-       "Wine Bars                                        987.500000   \n",
        "\n",
        "                        Percentage of Ratings  \n",
        "Category                                       \n",
@@ -469,18 +414,10 @@
        "American (New)                       4.115385  \n",
        "American (Traditional)               4.033333  \n",
        "Art Museums                          4.166667  \n",
-       "Asian Fusion                         4.000000  \n",
-       "...                                       ...  \n",
-       "Vegan                                4.166667  \n",
-       "Vegetarian                           4.000000  \n",
-       "Venues & Event Spaces                4.250000  \n",
-       "Vietnamese                           4.000000  \n",
-       "Wine Bars                            4.250000  \n",
-       "\n",
-       "[95 rows x 4 columns]"
+       "Asian Fusion                         4.000000  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +497,7 @@
     "# 3000 + being above average\n",
     "plt.axhline(y=2000, xmin=0, xmax=28, color=\"g\", linewidth=3, linestyle='--');\n",
     "plt.axhline(y=1000, xmin=0, xmax=28, color=\"k\", linewidth=3, linestyle='--');\n",
-    "plt.savefig(\"West - BarGraph_Average_Reviews_By_Categories.png\")\n",
+    "plt.savefig(\"plots/West_BarGraph_Average_Reviews_By_Categories.png\")\n",
     "\n",
     "# print(\"MEAN\")\n",
     "# print(bar_avg_review.mean())\n",
@@ -572,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +540,7 @@
     "plt.title(\"Average Reviews By Categories (Types of Restaurants)\\n\\n\\n\", fontsize=30, weight=\"bold\");\n",
     "clb.set_label(\"\\n\\nMedian Reviews\", fontsize=30, weight=\"bold\")\n",
     "\n",
-    "plt.savefig(\"West - ScatterPlot_Average_Reviews_By_Categories.png\")\n"
+    "plt.savefig(\"plots/West_ScatterPlot_Average_Reviews_By_Categories.png\")\n"
    ]
   },
   {
@@ -783,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +772,7 @@
     "# 3000 + being above average\n",
     "plt.axhline(y=2000, xmin=0, xmax=28, color=\"g\", linewidth=3, linestyle='--');\n",
     "plt.axhline(y=1000, xmin=0, xmax=28, color=\"k\", linewidth=3, linestyle='--');\n",
-    "plt.savefig(\"South_BarGraph_Average_Reviews_By_Categories.png\")\n",
+    "plt.savefig(\"plots/South_BarGraph_Average_Reviews_By_Categories.png\")\n",
     "\n",
     "# print(\"MEAN\")\n",
     "# print(bar_avg_review.mean())\n",
@@ -847,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -878,18 +815,18 @@
     "plt.title(\"Average Reviews By Categories (Types of Restaurants)\\n\\n\\n\", fontsize=30, weight=\"bold\");\n",
     "clb.set_label(\"\\n\\nMedian Reviews\", fontsize=30, weight=\"bold\")\n",
     "\n",
-    "plt.savefig(\"South_ScatterPlot_Average_Reviews_By_Categories.png\")"
+    "plt.savefig(\"plots/South_ScatterPlot_Average_Reviews_By_Categories.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34da8b25a7364ee484bad6e0973c2aab",
+       "model_id": "cfe4ec421957477c90a84ad5eec6749f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1057,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1046,7 @@
     "# 3000 + being above average\n",
     "plt.axhline(y=2000, xmin=0, xmax=28, color=\"g\", linewidth=3, linestyle='--');\n",
     "plt.axhline(y=1000, xmin=0, xmax=28, color=\"k\", linewidth=3, linestyle='--');\n",
-    "plt.savefig(\"North_BarGraph_Average_Reviews_By_Categories.png\")\n",
+    "plt.savefig(\"plots/North_BarGraph_Average_Reviews_By_Categories.png\")\n",
     "\n",
     "# print(\"MEAN\")\n",
     "# print(bar_avg_review.mean())\n",
@@ -1121,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1089,7 @@
     "plt.title(\"Average Reviews By Categories (Types of Restaurants)\\n\\n\\n\", fontsize=30, weight=\"bold\");\n",
     "clb.set_label(\"\\n\\nMedian Reviews\", fontsize=30, weight=\"bold\")\n",
     "\n",
-    "plt.savefig(\"North_ScatterPlot_Average_Reviews_By_Categories.png\")"
+    "plt.savefig(\"plots/North_ScatterPlot_Average_Reviews_By_Categories.png\")"
    ]
   },
   {
