--- a/MainSearchQuery-jjr.ipynb
+++ b/MainSearchQuery-jjr.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,9 @@
      "output_type": "stream",
      "text": [
       "What type of Category would you like to search for? i.e Restaurant\n",
-      "restaurant\n",
+      "Restaurant\n",
       "What city and state are you searching? i.e. New York City, NY\n",
-      "New York, NY\n"
+      "Weehawken, NJ\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for offset_num in range(50): \n",
+    "for offset_num in range(2): \n",
     "    try:\n",
     "        response = query_search(offset_num)\n",
     "        businesses=response['businesses']            \n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,20 +189,20 @@
        "      <td>40.761756</td>\n",
        "      <td>-73.979230</td>\n",
        "      <td>$</td>\n",
-       "      <td>9251</td>\n",
+       "      <td>9249</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Katz's Delicatessen</td>\n",
-       "      <td>V7lXZKBDzScDeGB8JmnzSA</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Delis</td>\n",
-       "      <td>40.722237</td>\n",
-       "      <td>-73.987430</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>11702</td>\n",
+       "      <td>Chart House</td>\n",
+       "      <td>_WsfOuvObbp1tH4cBE-jNw</td>\n",
+       "      <td>Weehawken</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>40.760728</td>\n",
+       "      <td>-74.018106</td>\n",
+       "      <td>$$$</td>\n",
+       "      <td>1361</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -215,20 +215,20 @@
        "      <td>40.730920</td>\n",
        "      <td>-73.990150</td>\n",
        "      <td>$$</td>\n",
-       "      <td>9846</td>\n",
+       "      <td>9849</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>The Metropolitan Museum of Art</td>\n",
-       "      <td>jVncyqXwlx_D9f2xZn05tg</td>\n",
+       "      <td>Bibble &amp; Sip</td>\n",
+       "      <td>WHRHK3S1mQc3PmhwsGRvbw</td>\n",
        "      <td>New York</td>\n",
        "      <td>NY</td>\n",
-       "      <td>Art Museums</td>\n",
-       "      <td>40.779254</td>\n",
-       "      <td>-73.962884</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2763</td>\n",
+       "      <td>Coffee &amp; Tea</td>\n",
+       "      <td>40.762820</td>\n",
+       "      <td>-73.985180</td>\n",
+       "      <td>$</td>\n",
+       "      <td>4593</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -245,106 +245,106 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2495</td>\n",
-       "      <td>Roberta's</td>\n",
-       "      <td>FhXjAc6nKLf414KxYujUHw</td>\n",
-       "      <td>Brooklyn</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Bengal Tiger Indian Food</td>\n",
+       "      <td>x0k5kFArHLijdY8-NEQ7Xg</td>\n",
+       "      <td>New York</td>\n",
        "      <td>NY</td>\n",
-       "      <td>Pizza</td>\n",
-       "      <td>40.705044</td>\n",
-       "      <td>-73.933571</td>\n",
+       "      <td>Indian</td>\n",
+       "      <td>40.763167</td>\n",
+       "      <td>-73.977131</td>\n",
        "      <td>$$</td>\n",
-       "      <td>2729</td>\n",
+       "      <td>1724</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>96</td>\n",
+       "      <td>Grace Street</td>\n",
+       "      <td>MKYhiSeXjahxh9O4Gqnimw</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Coffee &amp; Tea</td>\n",
+       "      <td>40.747858</td>\n",
+       "      <td>-73.986559</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>2301</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2496</td>\n",
-       "      <td>Bea</td>\n",
-       "      <td>Rc1lxc5lSKJYd162JHNMfQ</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Dutch Freds</td>\n",
+       "      <td>SaYTVG7wHCMDBofHCgXPaA</td>\n",
        "      <td>New York</td>\n",
        "      <td>NY</td>\n",
-       "      <td>American (New)</td>\n",
-       "      <td>40.759197</td>\n",
-       "      <td>-73.992336</td>\n",
+       "      <td>Cocktail Bars</td>\n",
+       "      <td>40.760710</td>\n",
+       "      <td>-73.987930</td>\n",
        "      <td>$$</td>\n",
-       "      <td>2380</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>Keens Steakhouse</td>\n",
+       "      <td>pQuZDnefX038xurT1BhDXA</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Steakhouses</td>\n",
+       "      <td>40.750710</td>\n",
+       "      <td>-73.986520</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>2455</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2497</td>\n",
-       "      <td>Grimaldi's Pizzeria</td>\n",
-       "      <td>2ggi1luerd3Mf_C82JvCYg</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Pizza</td>\n",
-       "      <td>40.702583</td>\n",
-       "      <td>-73.993241</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>4557</td>\n",
-       "      <td>3.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2498</td>\n",
-       "      <td>Sundaes and Cones</td>\n",
-       "      <td>TPBTUvbBVUfJeEWWy1o1QQ</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Mamoun's Falafel</td>\n",
+       "      <td>L-IuiVoFMDSw2K6OAciP1g</td>\n",
        "      <td>New York</td>\n",
        "      <td>NY</td>\n",
-       "      <td>Ice Cream &amp; Frozen Yogurt</td>\n",
-       "      <td>40.730934</td>\n",
-       "      <td>-73.989318</td>\n",
+       "      <td>Middle Eastern</td>\n",
+       "      <td>40.730287</td>\n",
+       "      <td>-74.000438</td>\n",
        "      <td>$</td>\n",
-       "      <td>1464</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2499</td>\n",
-       "      <td>JoJu</td>\n",
-       "      <td>JlFbaMbMzsu7FA307mUIqg</td>\n",
-       "      <td>Elmhurst</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Vietnamese</td>\n",
-       "      <td>40.740705</td>\n",
-       "      <td>-73.879350</td>\n",
-       "      <td>$</td>\n",
-       "      <td>1563</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2500 rows × 10 columns</p>\n",
+       "<p>100 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Business             Business ID      City State  \\\n",
-       "0                      Levain Bakery  H4jJ7XB3CetIr1pg56CczQ  New York    NY   \n",
-       "1                     The Halal Guys  xEnNFXtMLDF5kZDxfaCJgA  New York    NY   \n",
-       "2                Katz's Delicatessen  V7lXZKBDzScDeGB8JmnzSA  New York    NY   \n",
-       "3                          Ippudo NY  44SY464xDHbvOcjDzRbKkQ  New York    NY   \n",
-       "4     The Metropolitan Museum of Art  jVncyqXwlx_D9f2xZn05tg  New York    NY   \n",
-       "...                              ...                     ...       ...   ...   \n",
-       "2495                       Roberta's  FhXjAc6nKLf414KxYujUHw  Brooklyn    NY   \n",
-       "2496                             Bea  Rc1lxc5lSKJYd162JHNMfQ  New York    NY   \n",
-       "2497             Grimaldi's Pizzeria  2ggi1luerd3Mf_C82JvCYg  Brooklyn    NY   \n",
-       "2498               Sundaes and Cones  TPBTUvbBVUfJeEWWy1o1QQ  New York    NY   \n",
-       "2499                            JoJu  JlFbaMbMzsu7FA307mUIqg  Elmhurst    NY   \n",
+       "                    Business             Business ID       City State  \\\n",
+       "0              Levain Bakery  H4jJ7XB3CetIr1pg56CczQ   New York    NY   \n",
+       "1             The Halal Guys  xEnNFXtMLDF5kZDxfaCJgA   New York    NY   \n",
+       "2                Chart House  _WsfOuvObbp1tH4cBE-jNw  Weehawken    NJ   \n",
+       "3                  Ippudo NY  44SY464xDHbvOcjDzRbKkQ   New York    NY   \n",
+       "4               Bibble & Sip  WHRHK3S1mQc3PmhwsGRvbw   New York    NY   \n",
+       "..                       ...                     ...        ...   ...   \n",
+       "95  Bengal Tiger Indian Food  x0k5kFArHLijdY8-NEQ7Xg   New York    NY   \n",
+       "96              Grace Street  MKYhiSeXjahxh9O4Gqnimw   New York    NY   \n",
+       "97               Dutch Freds  SaYTVG7wHCMDBofHCgXPaA   New York    NY   \n",
+       "98          Keens Steakhouse  pQuZDnefX038xurT1BhDXA   New York    NY   \n",
+       "99          Mamoun's Falafel  L-IuiVoFMDSw2K6OAciP1g   New York    NY   \n",
        "\n",
-       "                       Category   Latitude  Longitude Price  Reviews  Rating  \n",
-       "0                      Bakeries  40.779940 -73.980283    $$     7772     4.5  \n",
-       "1                   Food Stands  40.761756 -73.979230     $     9251     4.0  \n",
-       "2                         Delis  40.722237 -73.987430    $$    11702     4.0  \n",
-       "3                         Ramen  40.730920 -73.990150    $$     9846     4.0  \n",
-       "4                   Art Museums  40.779254 -73.962884     0     2763     4.5  \n",
-       "...                         ...        ...        ...   ...      ...     ...  \n",
-       "2495                      Pizza  40.705044 -73.933571    $$     2729     4.0  \n",
-       "2496             American (New)  40.759197 -73.992336    $$     2380     4.0  \n",
-       "2497                      Pizza  40.702583 -73.993241    $$     4557     3.5  \n",
-       "2498  Ice Cream & Frozen Yogurt  40.730934 -73.989318     $     1464     4.5  \n",
-       "2499                 Vietnamese  40.740705 -73.879350     $     1563     4.5  \n",
+       "          Category   Latitude  Longitude Price  Reviews  Rating  \n",
+       "0         Bakeries  40.779940 -73.980283    $$     7772     4.5  \n",
+       "1      Food Stands  40.761756 -73.979230     $     9249     4.0  \n",
+       "2          Seafood  40.760728 -74.018106   $$$     1361     4.0  \n",
+       "3            Ramen  40.730920 -73.990150    $$     9849     4.0  \n",
+       "4     Coffee & Tea  40.762820 -73.985180     $     4593     4.5  \n",
+       "..             ...        ...        ...   ...      ...     ...  \n",
+       "95          Indian  40.763167 -73.977131    $$     1724     4.5  \n",
+       "96    Coffee & Tea  40.747858 -73.986559    $$     2301     4.0  \n",
+       "97   Cocktail Bars  40.760710 -73.987930    $$     1383     4.5  \n",
+       "98     Steakhouses  40.750710 -73.986520  $$$$     2455     4.0  \n",
+       "99  Middle Eastern  40.730287 -74.000438     $     2345     4.0  \n",
        "\n",
-       "[2500 rows x 10 columns]"
+       "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2500\n"
+      "100\n"
      ]
     }
    ],
@@ -391,12 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "business_df.to_csv('data/'+(location)+'_'+(search_category)+'.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
