--- a/ElieProjectMasterCopy.ipynb
+++ b/ElieProjectMasterCopy.ipynb
@@ -413,17 +413,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped_west = west_data.groupby(['State', 'Rating'])\n",
+    "total_grouped_categories1 = grouped_west['Category'].count()\n",
+    "grouped_price_avg1 = grouped_west['Price'].mean()\n",
+    "grouped_reviews_count1 = grouped_west['Reviews'].mean()\n",
+    "total_grouped_review_counts1 = grouped_west['Reviews'].count()\n",
+    "average_grouped_ratings1 = grouped_west['Rating'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total Restaurants by Sample</th>\n",
+       "      <th>Average Price By Category</th>\n",
+       "      <th>Average # of Reviews per Restaurant</th>\n",
+       "      <th>Average Ratings by Category</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"4\" valign=\"top\">CA</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>2411</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4.0</td>\n",
+       "      <td>325</td>\n",
+       "      <td>2.03</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4.5</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>583</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Total Restaurants by Sample  Average Price By Category  \\\n",
+       "State Rating                                                           \n",
+       "CA    3.5                              33                       2.21   \n",
+       "      4.0                             325                       2.03   \n",
+       "      4.5                             180                       1.85   \n",
+       "      5.0                              11                       1.18   \n",
+       "\n",
+       "              Average # of Reviews per Restaurant  Average Ratings by Category  \n",
+       "State Rating                                                                    \n",
+       "CA    3.5                                    2411                          3.5  \n",
+       "      4.0                                    1762                          4.0  \n",
+       "      4.5                                    1158                          4.5  \n",
+       "      5.0                                     583                          5.0  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_category_stats_df1= pd.DataFrame({\n",
+    "    \"Total Restaurants by Sample\": total_grouped_categories1,\n",
+    "    \"Average Price By Category\": grouped_price_avg1.round(2),\n",
+    "    \"Average # of Reviews per Restaurant\": grouped_reviews_count1.astype(int),\n",
+    "    \"Average Ratings by Category\": average_grouped_ratings1.round(2)\n",
+    "})\n",
+    "grouped_category_stats_df1"
+   ]
   },
   {
    "cell_type": "code",
