Updated Class Test Demo

--- a/ProjectMaster-Final Off Cleaned Merge.ipynb
+++ b/ProjectMaster-Final Off Cleaned Merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
     "from config import api_key\n",
     "gmaps.configure(api_key= gkey)\n",
     "\n",
-    "merged_table_df=(pd.read_csv('data/mergedtable.csv'))\n",
-    "west_data = merged_table.loc[merged_table['State']=='CA']\n",
-    "east_data = merged_table.loc[merged_table['State']=='CA']\n",
-    "south_data = merged_table.loc[merged_table['State']=='CA']\n",
-    "north_data = merged_table.loc[merged_table['State']=='CA']"
+    "merged_table=(pd.read_csv('data/mergedtable.csv'))\n",
+    "west_data = merged_table_df.loc[merged_table['State']=='CA']\n",
+    "east_data = merged_table_df.loc[merged_table['State']=='CA']\n",
+    "south_data = merged_table_df.loc[merged_table['State']=='CA']\n",
+    "north_data = merged_table_df.loc[merged_table['State']=='CA']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,13 @@
        "4  37.795831 -122.393303      2     5819     4.5  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_table_df.head()"
+    "merged_table.head()"
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "Breakfast & Brunch                               4.06  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +489,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d37a7ffe198d4bdd8025a91a606bc892",
+       "model_id": "664a1a365178424ba7d75263ebe9f0c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "Bakeries                                 4.30  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -803,13 +803,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c1c4c7ec52b473a8e99882e09280d9e",
+       "model_id": "6e81eb3206f1491080823ec6a58a528d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
        "Bakeries                                 4.30  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1120,13 +1120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c33b6e93dc8453199ed7a8a641f68ac",
+       "model_id": "b232e56082264588b06b214b984e05be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "Bakeries                                 4.30  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1436,13 +1436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "661785d0675642229bc5132cd59bf82c",
+       "model_id": "11fbd5244d664faa81e2e82317788672",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1477,7 +1477,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#these different codes will yield different pivot types of tables.\n",
+    "\n",
+    "#this will yeild broken down by state and price averages\n",
+    "# grouped_merged_df = merged_table_df.groupby(['State'])\n",
+    "\n",
+    "#this will break down by ratings in states.\n",
+    "# grouped_merged_df = merged_table_df.groupby(['State', 'Rating'])\n",
+    "\n",
+    "#this will breakdown by state, ratings and price and offer price by rating\n",
+    "# grouped_merged_df = merged_table_df.groupby(['State', 'Price', 'Rating'])\n",
+    "\n",
+    "#this changed to the grouping of the categories, Just redundant to the individual dataframes.\n",
+    "# grouped_merged_df = merged_table_df.groupby(['State', 'Category', 'Price'])\n",
+    "\n",
+    "# grouped_merged_df = merged_table_df.groupby(['Category','Rating'])\n",
+    "\n",
+    "#breakdown categories by top 10 popular\n",
+    "# grouped_merged_df = merged_table_df.groupby(['Category'])\n",
+    "# df.sort_values(by='col1', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
