--- a/ClassTestFile.ipynb
+++ b/ClassTestFile.ipynb
@@ -256,12 +256,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Change the Groupby to Category to Get Breakdown of Restaurants in Given Area"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "master2.groupby('Category')\n",
+    "# master2.groupby('Category')\n",
     "#count the different categories in the category count.\n",
     "category_counts = master2['Category'].nunique()\n",
     "#get the average of the reviews for sample of 50\n",
